bringing connection to s3

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-#master.uri=spark://spark-master:7077
-master.uri=local[*]
+master.uri=spark://spark-master:7077
+#master.uri=local[*]
+s3.endpoint=http://anaconda.csd.auth.gr:9000
+app.name=siesta-query-processor
