--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-master.uri=spark://spark-master:7077
+master.uri=spark://alex2.csd.auth.gr:7077
 #master.uri=local[*]
-s3.endpoint=http://anaconda.csd.auth.gr:9000
+s3.endpoint=http://localhost:9000
 app.name=siesta-query-processor
+server.port=8090
